# bridgeproject

./: .gitignore
gbridge_cli/: AUTHORS  ChangeLog  Makefile.am  config.h  config.h.in  configure.ac
gbridge_cli/config/: Makefile.am  gbridge_cli.conf
gbridge_cli/pixmaps/: Makefile.am  RT.xpm  ench1C.xpm  ench1K.xpm  ench1N.xpm  ench1P.xpm  ench1T.xpm  ench2C.xpm  ench2K.xpm  ench2N.xpm  ench2P.xpm  ench2T.xpm  ench3C.xpm  ench3K.xpm  ench3N.xpm  ench3P.xpm  ench3T.xpm  ench4C.xpm  ench4K.xpm  ench4N.xpm  ench4P.xpm  ench4T.xpm  ench5C.xpm  ench5K.xpm  ench5N.xpm  ench5P.xpm  ench5T.xpm  ench6C.xpm  ench6K.xpm  ench6N.xpm  ench6P.xpm  ench6T.xpm  ench7C.xpm  ench7K.xpm  ench7N.xpm  ench7P.xpm  ench7T.xpm  enchPP.xpm  enchXP.xpm  enchXX.xpm  (+5 more)
gbridge_cli/src/: Makefile  Makefile.am  alloc.c  alloc.h  arbitre.c  arbitre.h  callbacks.c  callbacks.h  client.c  client.h  create_config.c  create_config.h  draw.c  draw.h  file.c  file.h  find.c  find.h  free.c  free.h  gbridge_cli.c  gbridge_cli.h  ihmbridge.c  ihmbridge.h  jeu.c  jeu.h  load.c  load.h  objets.c  objets.h  outils.c  traffic.c  traffic.h
gbridge_srv/: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h  configure.ac
gbridge_srv/config/: Makefile.am  bids_srv.conf  gbridge_srv.conf
gbridge_srv/src/: Makefile  Makefile.am  analyse.c  analyse.h  arbitre.c  arbitre.h  create_config.c  create_config.h  distribution.c  distribution.h  file.c  file.h  gbridge_srv.c  gbridge_srv.h  ia.c  ia.h  objets.c  objets.h  stack.c  stack.h  traffic.c  traffic.h
