EXTRA_DIST = 2C.xpm 2K.xpm 2P.xpm 2T.xpm 3C.xpm 3K.xpm 3P.xpm 3T.xpm 4C.xpm 4K.xpm 4P.xpm 4T.xpm 5C.xpm 5K.xpm 5P.xpm 5T.xpm \
	6C.xpm 6K.xpm 6P.xpm 6T.xpm 7C.xpm 7K.xpm 7P.xpm 7T.xpm 8C.xpm 8K.xpm 8P.xpm 8T.xpm 9C.xpm 9K.xpm 9P.xpm 9T.xpm \
	AC.xpm AK.xpm AP.xpm AT.xpm background.xpm back.xpm DC.xpm DK.xpm DP.xpm ench1C.xpm ench1K.xpm ench1N.xpm \
	ench1P.xpm ench1T.xpm ench2C.xpm ench2K.xpm ench2N.xpm ench2P.xpm ench2T.xpm ench3C.xpm ench3K.xpm ench3N.xpm \
	ench3P.xpm ench3T.xpm ench4C.xpm ench4K.xpm ench4N.xpm ench4P.xpm ench4T.xpm ench5C.xpm ench5K.xpm ench5N.xpm \
	ench5P.xpm ench5T.xpm ench6C.xpm ench6K.xpm ench6N.xpm ench6P.xpm ench6T.xpm ench7C.xpm ench7K.xpm ench7N.xpm \
	ench7P.xpm ench7T.xpm enchPP.xpm enchXP.xpm enchXX.xpm icon-club.xpm icon-diamond.xpm icon-heart.xpm icon-none.xpm \
	icon-spade.xpm Makefile.am RC.xpm RK.xpm RP.xpm RT.xpm VC.xpm VK.xpm VP.xpm VT.xpm XC.xpm XK.xpm XP.xpm XT.xpm
